# breast-cancer-detector

./: README.md  app.py  claude.md  pyproject.toml  requirements.txt  run_pipeline.py
data/processed/: X_test.csv  X_train.csv  feature_names.csv
models/: best_model.pkl  knn.pkl  logistic_regression.pkl  svm.pkl  xgboost.pkl
reports/: model_comparison.csv
src/: __init__.py
src/data/: __init__.py  download.py  preprocess.py
src/models/: __init__.py  evaluate.py  train.py
src/visualization/: __init__.py  plots.py
