[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breast-cancer-detector"
version = "0.1.0"
description = "End-to-end breast cancer classification pipeline with an interactive Streamlit dashboard"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Suresh Babu Jannu", email = "sureshbabu.jannu@gmail.com" }]
keywords = ["machine-learning", "classification", "breast-cancer", "streamlit", "scikit-learn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "xgboost>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "plotly>=5.10.0",
    "streamlit>=1.20.0",
    "joblib>=1.2.0",
    "ucimlrepo>=0.0.3",
]

[project.optional-dependencies]
explainability = [
    "shap>=0.41.0",
]
imbalanced = [
    "imbalanced-learn>=0.10.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "black>=24.0",
    "mypy>=1.0",
]
all = [
    "breast-cancer-detector[explainability,imbalanced,dev]",
]

[project.scripts]
run-pipeline = "run_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ---------------------------------------------------------------------------
# Ruff — linting & formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ---------------------------------------------------------------------------
# Black — code formatting
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

# ---------------------------------------------------------------------------
# mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
